Projects added, new images

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
 * {
   font-family: 'Nunito', sans-serif;
   font-weight: 200;
+
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
   margin: 0;
   padding: 0;
 }
