--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -3,43 +3,43 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 200px;
 }
-.introduction .aboutMe{
+.introduction .innerContainer{
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
-.introduction .aboutMe .greeting{
+.introduction .innerContainer .greeting{
   font-weight: bold;
   font-size: xxx-large;
   text-align: left;
 }
 
-.introduction .aboutMe .description{
+.introduction .innerContainer .description{
   font-size: x-large;
 }
-.introduction .aboutMe .buttons{
+.introduction .innerContainer .buttons{
   display: flex;
   flex-direction: row;
   gap: 1rem;
 }
-.introduction .aboutMe .buttons button{
+.introduction .innerContainer .buttons button{
   font-size: large;
   font-weight: 500;
   outline: none;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: gold;
-  color: black;
+  background-color: rgb(0, 0, 0);
+  color: white;
   padding: 1rem 2rem;
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
-.introduction .aboutMe .buttons button:hover{
+.introduction .innerContainer .buttons button:hover{
   border-radius: 15px;
   transform: scale(1.1, 1.1);
-  box-shadow: 0px 0px 8px 8px rgba(255, 217, 0, 0.476);
+  box-shadow: 0px 0px 16px 8px rgba(0, 0, 0, 0.219);
 }
 
 .introduction img{
