--- a/src/components/Projects/Card/Card.css
+++ b/src/components/Projects/Card/Card.css
@@ -58,3 +58,9 @@
   align-items: center;
   gap: 1rem;
 }
+
+@media screen and (max-width: 460px) {
+  .card .description {
+    text-align: center;
+  }
+}
