--- a/src/components/Projects/Card/Tag/Tag.css
+++ b/src/components/Projects/Card/Tag/Tag.css
@@ -3,7 +3,7 @@
   text-align: center;
   background-color: rgb(216, 216, 216);
   border-radius: 20px;
-  padding: 5px;
+  padding: 5px 10px 5px 10px;
   font-size: small;
   font-weight: 500;
   height: max-content;
