--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,5 +1,6 @@
 .aboutMe{
   margin-top: 150px;
+  padding: 20px;
 }
 
 .aboutMe .title{
@@ -10,6 +11,8 @@
 .aboutMe .aboutMeContainer {
   padding: 20px;
   display: flex;
+  flex-shrink: 1;
+  gap: 2rem;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
@@ -18,7 +21,14 @@
 .aboutMe .aboutMeContainer .images{
   display: flex;
   flex-direction: column;
+  flex-basis: 1;
   gap: 2rem;
+}
+
+.aboutMe .aboutMeContainer .images img{
+  height: auto;
+  width: 100%;
+  opacity: 0;
 }
 
 .aboutMe .aboutMeContainer .description {
@@ -39,7 +49,7 @@
   line-height: 1.5em;
 }
 .paragraphs ul li::before{
-  content: "- ";
+  content: "• ";
 }
 .paragraphs ul li{
   list-style: none;
@@ -60,7 +70,7 @@
     justify-content: center;
   }
   
-  .aboutMe .aboutMeContainer .images{
+  /* .aboutMe .aboutMeContainer .images{
     display: none;
-  }
+  } */
 }
