--- a/src/components/Projects/Card/Card.css
+++ b/src/components/Projects/Card/Card.css
@@ -9,6 +9,7 @@
   height: max-content;
   border-radius: 15px;
   box-shadow: 0px 4px 18px 4px rgba(127, 127, 127, 0.5);
+  opacity: 0;
 }
 .card .projectTitle{
   font-size: x-large;
