--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -43,6 +43,10 @@
   box-shadow: 0px 0px 16px 8px rgba(0, 0, 0, 0.219);
 }
 
+.resume img{
+  opacity: 0;
+}
+
 @media screen and (max-width: 900px) {
   .resume{
     flex-direction: column;
